--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,11 @@ buildscript {
     ext.koin_version = '1.0.2'
     ext.glide_version = '4.8.0'
     ext.retrofit_version = '2.5.0'
+    ext.okhttp_version = '3.12.1'
     ext.rxjava_version = '2.2.5'
     ext.rxkotlin_version = '2.3.0'
     ext.rxandroid_version = '2.1.0'
+    ext.mockk_version = '1.9'
     repositories {
         google()
         jcenter()
