--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,9 @@ buildscript {
     ext.rxjava_version = '2.2.5'
     ext.rxkotlin_version = '2.3.0'
     ext.rxandroid_version = '2.1.0'
-    ext.mockk_version = '1.9'
+    ext.junit_version = '4.12'
+    ext.truth_version  = '0.42'
+    ext.mockito_version = '2.23.4'
     repositories {
         google()
         jcenter()
