role fragment xml refactored

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.activities.MainActivity" />
         <activity
-            android:name=".ui.activities.MainActivity"
+            android:name=".ui.activities.RegisterActivity"
             android:screenOrientation="locked" />
     </application>
 
