--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.3.21'
     ext.lifecycle_version = '2.0.0'
-    ext.nav_version = '1.0.0-beta01'
+    ext.nav_version = '1.0.0-beta02'
     ext.ktx_version = '1.0.1'
     ext.koin_version = '1.0.2'
     ext.glide_version = '4.8.0'
@@ -22,6 +22,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
