--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,10 @@
 buildscript {
     ext.kotlin_version = '1.3.21'
     ext.lifecycle_version = '2.0.0'
-    ext.nav_version = '1.0.0-beta02'
+    ext.nav_version = '1.0.0'
     ext.ktx_version = '1.0.1'
     ext.koin_version = '1.0.2'
-    ext.glide_version = '4.8.0'
+    ext.picasso_version = '2.71828'
     ext.retrofit_version = '2.5.0'
     ext.okhttp_version = '3.12.1'
     ext.rxjava_version = '2.2.5'
